# financial-agent

./: .gitignore  main.py  pyproject.toml  system.md  test_phase2.py  test_phase3.py
eval/: __init__.py  conftest.py  datasets.py  evaluators.py  langfuse_runner.py  runner.py  test_eval.py
frontend/: about.html  app.js  collections.html  index.html  styles.css  watchlist.html
logs/: NVDA_RESEARCH_20260204_212339.json  NVDA_RESEARCH_20260204_212339.md  NVDA_RESEARCH_20260205_195014.json  NVDA_RESEARCH_20260205_195014.md  NVDA_RESEARCH_20260205_204945.json  NVDA_RESEARCH_20260205_204945.md  NVDA_RESEARCH_20260206_220207.json  NVDA_RESEARCH_20260206_220207.md  NVDA_RESEARCH_20260214_112025.json  NVDA_RESEARCH_20260214_112025.md  NVDA_RESEARCH_20260214_113013.json  NVDA_RESEARCH_20260214_113013.md  NVDA_RESEARCH_20260214_122051.json  NVDA_RESEARCH_20260214_122051.md  NVDA_RESEARCH_20260214_123019.json  NVDA_RESEARCH_20260214_123019.md  NVDA_RESEARCH_20260214_123503.json  NVDA_RESEARCH_20260214_123503.md  NVDA_RESEARCH_20260214_125107.json  NVDA_RESEARCH_20260214_125107.md  NVDA_RESEARCH_20260214_125912.json  NVDA_RESEARCH_20260214_125912.md  NVDA_RESEARCH_20260214_151255.json  NVDA_RESEARCH_20260214_151255.md  NVDA_RESEARCH_20260214_164337.json  NVDA_RESEARCH_20260214_164337.md  NVDA_RESEARCH_20260214_164545.json  NVDA_RESEARCH_20260214_164545.md  NVDA_RESEARCH_20260214_165813.json  NVDA_RESEARCH_20260214_165813.md  TPC_RESEARCH_20260214_145758.json  TPC_RESEARCH_20260214_145758.md
src/: client.py  graph.py  schemas.py  state.py  tools.py  utils.py
(+1 files in other folders)
